haskell-devscripts (0.8.14) UNRELEASED; urgency=low

  * Explicitly mention which Prelude to use in dh_haskell_shlibdeps, thanks to
    Clifford Beshers for the patch.
  * Use cdbsn' $(DEB_PACKAGES) instead of parsing debian/control to see if
    profiling is desired.

 -- Joachim Breitner <nomeata@debian.org>  Sun, 27 Jan 2013 19:35:58 +0100

haskell-devscripts (0.8.13) experimental; urgency=low

  [ Joachim Breitner ]
  * Improve parsing of "Setup register" output, patch by David Fox
  * Enable creation of hoogle files, thanks to Kiwamu Okabe for the
    suggestion.

  [ Kiwamu Okabe ]
  * Need --html option to fix bug that --hoogle option don't output html file.
  * Support to create /usr/lib/ghc-doc/hoogle/*.txt for hoogle package.

  [ Joachim Breitner ]
  * Symlink hoogle’s txt files to /usr/lib/ghc-doc/hoogle/
  * Bump ghc dependency to 7.6
  * Bump standards version

 -- Joachim Breitner <nomeata@debian.org>  Mon, 08 Oct 2012 21:14:50 +0200

haskell-devscripts (0.8.12) unstable; urgency=low

  * Depend on ghc >= 7.4, adjusting to its haddock --interface-version
    behaviour.

 -- Joachim Breitner <nomeata@debian.org>  Sat, 04 Feb 2012 10:50:33 +0100

haskell-devscripts (0.8.11) unstable; urgency=low

  * Conflict with ghc >= 7.4; as haddock --interface-name behaves differently
    then. A new haskell-devscripts upload will happen when ghc-7.4 enters
    unstable.

 -- Joachim Breitner <nomeata@debian.org>  Thu, 05 Jan 2012 13:28:23 +0100

haskell-devscripts (0.8.10) unstable; urgency=low

  * Run Cabal-defined testsuites, if DEB_ENABLE_TESTS = yes is set in
    debian/rules.

 -- Joachim Breitner <nomeata@debian.org>  Wed, 04 Jan 2012 20:13:14 +0100

haskell-devscripts (0.8.9) unstable; urgency=low

  [ Giovanni Mascellani ]
  * Make -doc packages recommend -dev instead of suggesting. It's likely that
    people installing documentation want the library too. (Closes: #635754)
  * Fix the header and footer in manpages (Haskell is quite the opposite